Add checkout route, missing payment logic
